...

    var body: some View {
        Form {
            // MARK: Name Section
            Section {
                TextField("Focus mode name", text: $viewModel.name)
                    .accessibilityIdentifier("NameTextField")
            } header: {
                Text("Name")
            }

            // MARK: Icon Section
            Section {
...
